# Impala

./: CMakeLists.txt  lsan_suppressions.txt
be/: CMakeLists.txt
be/generated-sources/gen-cpp/: CMakeLists.txt
be/src/benchmarks/: CMakeLists.txt  bloom-filter-benchmark.cc  expr-benchmark.cc  row-batch-serialize-benchmark.cc
be/src/catalog/: CMakeLists.txt  catalog-server.cc  catalog-server.h  catalog_service.proto  catalogd-main.cc
be/src/codegen/: CMakeLists.txt  gen_ir_descriptions.py
be/src/common/: CMakeLists.txt  atomic.h  config.h.in  init.cc  status.cc  status.h
be/src/exec/: CMakeLists.txt  blocking-join-node.cc  catalog-op-executor.cc  data-sink.cc  data-sink.h  exchange-node.cc  exec-node.cc  exec-node.h  hash-join-node.cc  hash-table.inline.h  hbase-table-sink.cc  hbase-table-sink.h  hdfs-avro-scanner-test.cc  hdfs-parquet-scanner.cc  hdfs-scan-node.cc  hdfs-table-sink.cc  hdfs-table-sink.h  kudu-scan-node.h  kudu-scanner.h  kudu-table-sink.cc  kudu-table-sink.h  kudu-util.h  old-hash-table.cc  parquet-column-readers.cc  parquet-column-stats.h  parquet-common.h  parquet-metadata-utils.cc  partitioned-aggregation-node.cc  partitioned-hash-join-node-ir.cc  partitioned-hash-join-node.cc  partitioned-hash-join-node.h  plan-root-sink.cc  plan-root-sink.h  push-pull-sink.cc  push-pull-sink.h
be/src/experiments/: compression-test.cc
be/src/exprs/: CMakeLists.txt  expr-test.cc
be/src/gutil/: CMakeLists.txt  atomic_refcount.h  atomicops-internals-x86.cc  atomicops-internals-x86.h  bind.h  bind.h.pump  bind_helpers.h  bind_internal.h  bind_internal.h.pump  bits.cc  bits.h  callback.h  callback.h.pump  callback_internal.h  cpu.cc  dynamic_annotations.h  gscoped_ptr.h  macros.h  map-util.h  port.h  raw_scoped_refptr_mismatch_checker.h  ref_counted_memory.cc  ref_counted_memory.h  spinlock.cc  spinlock_linux-inl.h  sysinfo.cc  walltime.h
be/src/gutil/hash/: city.cc
be/src/gutil/strings/: human_readable.cc  join.cc  numbers.cc  split.cc  split.h  stringpiece.cc  substitute.cc  util.cc
be/src/gutil/threading/: thread_collision_warner.cc  thread_collision_warner.h
be/src/kudu/: CMakeLists.txt
be/src/resourcebroker/: resource-broker.cc  resource-broker.h
be/src/rpc/: CMakeLists.txt  authentication.cc  common.proto  impala-service-pool.cc  impala-service-pool.h  my-server.cc  my-server.h  my-socket.cc  my-socket.h  rpc-builder.h  rpc-mgr-test.cc  rpc-mgr.cc  rpc-mgr.h  rpc.h  (+8 more)
cmake_modules/: FindLibEvent.cmake  FindProtobuf.cmake  kudu_cmake_fns.txt
common/thrift/: CMakeLists.txt  CatalogService.thrift  DataSinks.thrift  ImpalaInternalService.thrift  ImpalaService.thrift  PlanNodes.thrift  Planner.thrift  StatestoreService.thrift  generate_error_codes.py
shell/: impala_client.py  impala_shell.py
testdata/cluster/: admin
tests/beeswax/: impala_beeswax.py
tests/common/: impala_connection.py  impala_test_suite.py
tests/custom_cluster/: test_breakpad.py  test_rpc_timeout.py
tests/query_test/: test_runtime_filters.py
tests/rpc/: test_1599.py  test_exec_node_injection.py  test_timeouts.py
tests/statestore/: test_statestore.py
tests/util/: test_file_parser.py
www/: backends.tmpl  debug_actions.tmpl  rpcz.tmpl
(+452 files in other folders)
